# UCSD-scheduleofclasses-scraper-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
scripts/: __init__.py  run_tests.py
tests/: test_perf.py  test_scrape.py
tests/data/: departments.json  menu_page.html  subjects.json
ucsd_schedule_api/: __init__.py  core.py  exceptions.py  fetcher.py  models.py  parsers.py
